# knogen-fast-api

./: .gitignore  Dockerfile  README.md  hello.py  makefile  pyproject.toml
app/: main.py
app/routers/: baikedemo.py  metapedia_v1.py  openalex.py  wikipedia.py
script/openalex/: stats_country_paper_count.py
